# temoto_intuitive_teleoperator

./: .gitignore  .gitmodules  LICENSE  README.md  spacenav_buttons.pptx  temoto_verbal_instructions_ver03.odt
griffin_powermate/: CMakeLists.txt  LICENSE  README.md  package.xml
griffin_powermate/msg/: PowermateEvent.msg
griffin_powermate/src/: griffin_powermate.cpp
spacenav_pro/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
spacenav_pro/launch/: classic.launch  no_deadband.launch  static_deadband.launch
spacenav_pro/src/: spacenav_pro.cpp
temoto/: CMakeLists.txt  package.xml  temoto_verbal_instructions_ver02.odt
temoto/action/temoto/: PreplannedSequence.action
temoto/config/: herbie.yaml  ripley.yaml  ur3.yaml  ur5_sim.yaml  vaultbot.yaml  vaultbot_temoto.rviz
temoto/include/: interpret_utterance.h  move_robot.h  navigate_robot.h  start_teleop.h  temoto_common.h  temoto_include.h
temoto/include/temoto/: check_for_temoto_keyboard_priority.h  common_commands.h  get_ros_params.h  graphics_and_frames.h  gripper_base_class.h  gripper_robotiq.h  gripper_zimmer.h  grippers.h  interpret_utterance.h  low_level_cmds.h  make_compliant_adjustment.h  motion_actions.h  move_robot.h  navigate_robot.h  preplanned_sequences.h  rviz_visual.h  start_teleop.h  temoto_commands.h  temoto_common.h
temoto/include/temoto/preplanned_sequences/: close_gripper.h  close_hand.h  enable_compliance.h  go_to_laser_scan.h  open_gripper.h  open_hand.h  robot_approach.h  robot_please_approach.h  robot_please_scan.h  robot_push_button.h  turn_handle_clockwise.h  turn_handle_counterclockwise.h
temoto/launch/: fake_voice.launch  fake_voice_commander.launch  herbie.launch  moveit.rviz  ripley_temoto.launch  sia5_moveit_rviz_interactive_markers.launch  sia5_rviz_planning_execution.launch  sia5_temoto.launch  static_hmd_tf_publisher.launch  ur3.launch  ur3_moveit_rviz.launch  ur3_temoto.launch  ur3_temoto.rviz  ur5.launch  ur5_moveit_rviz.launch  ur5_temoto.launch  ur5_temoto.rviz  ur5_temoto_sim.launch  vaultbot_moveit_rviz.launch  vaultbot_temoto.launch  vaultbot_temoto.rviz  vaultbot_temoto_vr.rviz  vr_setup.launch
temoto/meshes/: 2_finger_85_gripper_marker.stl  MotorMount_Output.stl  ToolChangerBase.stl  ToolChangerBase_backup.stl  manip_cube.stl  robotiq_2f_140_visual_temoto.stl
temoto/msg/: Command.msg  Dial.msg  Status.msg
temoto/nodes/: level_tf
temoto/src/: async_tf_broadcaster.cpp  check_for_temoto_keyboard_priority.cpp  frame_broadcaster.cpp  get_ros_params.cpp  graphics_and_frames.cpp  griffin_powermate.cpp  gripper_base_class.cpp  gripper_frame_broadcaster.cpp  gripper_robotiq.cpp  gripper_zimmer.cpp  grippers.cpp  human_frame_broadcaster.cpp  interpret_utterance.cpp  kb_fake_voice_commander.cpp  listen_operator_talk.cpp  make_compliant_adjustment.cpp  move_robot.cpp  navigate_robot.cpp  powermate_dial.cpp  preplanned_sequences.cpp  rviz_visual.cpp  start_teleop.cpp  temoto_common.cpp  temoto_include.cpp
temoto/src/preplanned_sequences/: close_gripper.cpp  close_hand.cpp  enable_compliance.cpp  go_to_laser_scan.cpp  open_gripper.cpp  open_hand.cpp  robot_approach.cpp  robot_please_approach.cpp  robot_please_scan.cpp  robot_push_button.cpp  turn_handle_clockwise.cpp  turn_handle_counterclockwise.cpp
temoto/srv/: ChangeTf.srv  Goal.srv
temoto_support/meshes/: 2_finger_140_gripper.dae  2_finger_140_gripper.stl  2_finger_140_gripper_marker.stl  2_finger_85_gripper.dae  2_finger_85_gripper.stl  2_finger_85_gripper_marker.stl  2_finger_85_gripper_marker_backup.stl  2_finger_85_gripper_urdf.stl  Shovel.stl  manip_cube.stl
temoto_support/pocketsphinx_kb/: temoto_corpus.txt  temoto_sphinx_kb.dic  temoto_sphinx_kb.lm  temoto_sphinx_kb.log_pronounce  temoto_sphinx_kb.sent  temoto_sphinx_kb.vocab
temoto_support/yaml/: preplanned_motions.yaml
temoto_universal_robot/ur3_moveit_config/: .setup_assistant
temoto_universal_robot/ur3_moveit_config/config/: ur3.srdf
temoto_universal_robot/ur5_moveit_config/: .setup_assistant  package.xml
temoto_universal_robot/ur5_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  ur5.srdf
temoto_universal_robot/ur_bringup/launch/: ur_common.launch
temoto_universal_robot/ur_description/urdf/: ur3_robot.urdf.xacro  ur5.urdf.xacro  ur5_robot.urdf.xacro
temoto_ur3_moveit_config/config/: temoto_ur3.srdf
