<?xml version="1.0"?>
<package>
  <name>griffin_powermate</name>
  <version>0.0.0</version>
  <description>ROS driver for Griffin Powermate turn knob.</description>

  <maintainer email="karl.kruusamae@utexas.edu">Karl Kruusamäe</maintainer>

  <license>3-clause BSD</license>

  <url type="website">http://robotics.me.utexas.edu</url>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>