<?xml version="1.0"?>
<package format="2">
  <name>temoto</name>
  <version>0.0.0</version>
  <description>TEMOTO package allows intuitive human-robot interaction and scalable motion of mobile manipulators.</description>

  <maintainer email="andyz@utexas.edu">Karl Kruusamäe</maintainer>
  <license>3-clause BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>grasp_interface</depend>
  <depend>griffin_powermate</depend>
  <depend>jog_arm</depend>
  <depend>jog_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>robotiq_c_model_control</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rviz_animated_view_controller</depend>
  <depend>sound_play</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>view_controller_msgs</depend>
  <depend>visualization_msgs</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
