<?xml version="1.0"?>
<package format="2">
  <name>temoto</name>
  <version>0.0.0</version>
  <description>TEMOTO package allows intuitive human-robot interaction and scalable motion of mobile manipulators.</description>

  <maintainer email="andyz@utexas.edu">Karl Kruusamäe</maintainer>
  <license>3-clause BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>compliance_control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>griffin_powermate</depend>
  <depend>keyboard_reader</depend>
  <depend>message_runtime</depend>
  <depend>move_base_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>robotiq_2f_gripper_control</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sound_play</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>view_controller_msgs</depend>

  <export>
  </export>
</package>
